--- a/index.html
+++ b/index.html
@@ -1,37 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>instagram</title>
-
+    <title>Instabox</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="parent">
-
-        <div class="header">
-            <div class="icon">
-                <img src="assets\logo.png" height="75px" alt="Instagram Icon" />
+    <div class="masterbox">
+        <div id="instalogo" >
+            <img src="assets\logo.png"/>
+        </div>
+        <br>
+        <div class="contents">
+        <div class="topbar">
+        <div id="igtext">
+            <p>instagram</p>
+            <img src="assets\check-mark.png" height="15px" width="auto"/>
+        </div>
+        <div id="followingbutton">
+            <button><b>Following</b></button>
+        </div>
+        <div id="more">
+            <p><button>...</button></p>
+        </div>
+        </div>
+        <div class="numbers">
+            <div id="posts">
+              <p><b>5,863</b> posts</p>
             </div>
-            <div class="information">
-                <div style="font-size: medium;"> instagram &nbsp; <img src="assets\check-mark.png" width="10px"
-                    height="10px"
-                    alt="Instagram Icon" /></div> &nbsp; <img src="assets\following.png" width="90px" height="25px"
-                    alt="Instagram Icon"/>
+            <div id="followers">
+              <p><b>303m</b> followers</p>
             </div>
+            <div id="following">
+              <p><b>223</b> following</p>
+            </div>
+        </div>
+        <div class="bio">
+        <div id="instagramtext">
+              <p><b>Instagram</b></p>
+            </div> 
+            <div class="Bioinput">
+              <p>Bringing you closer to the people and things you love. <img src="assets\heart.png" height="15px" width="auto"> </p>
+            </div>
+            <div id="link">
+              <a href="help.instagram.com">help.instagram.com </a>
+            </div>
+            <div id="followedby">
+                <p>Followed by <b>thedailyshow</b> and <b>kevin</b></p>
+            </div>  
+          </div>
+        </div>    
     </div>
-
-    <div class="catagories">
-        <img src="assets\talent.png" class="no-wrap" width="50px" height="50px" 
-        alt="Talent"/> &nbsp; <img src="assets\travel.png" width="50px" height="50px"
-        alt="Travel"/> &nbsp; <img src="assets\beauty.png" width="50px" height="50px"
-        alt="Beauty"/> &nbsp; <img src="assets\fluff.png" width="50px" height="50px" 
-        alt="Fluff"/>  &nbsp; <img src="assets\sports.png" width="50px" height="50px" 
-        alt="Sports"/> &nbsp; <img src="assets\asmr.png" width="50px" height="50px" 
-        alt="ASMR"/>
-    </div>
+    <div class="categories">
+        <figure class="talent">
+          <img src="assets\talent.png" height="100px" width="auto"/>
+            <figcaption class="caption">Talent</figcaption>
+        </figure>
+        <figure class="travel">
+          <img src="assets\travel.png" height="100px" width="auto"/>
+            <figcaption class="caption">Travel</figcaption>
+        </figure>
+        <figure class="beauty">
+          <img src="assets\beauty.png" height="100px" width="auto"/>
+            <figcaption class="caption">Beauty</figcaption>
+        </figure>
+        <figure class="asmr">
+          <img src="assets\asmr.png" height="100px" width="auto"/>
+            <figcaption class="caption">ASMR</figcaption>
+        </figure>
+        <figure class="fluff">
+          <img src="assets\fluff.png" height="100px" width="auto"/>
+            <figcaption class="caption">Fluff</figcaption>
+        </figure>
+        <figure class="sports">
+          <img src="assets\sports.png" height="100px" width="auto"/>
+            <figcaption class="caption">Sports</figcaption>
+        </figure>
+</div>
 </body>
+</html>
